2005-12-16  Tim-Philipp Müller  <tim at centricular dot net>

	* ext/wavpack/gstwavpackdec.c:
	  Oops, remove trailing comma from caps string.

2005-12-16  Tim-Philipp Müller  <tim at centricular dot net>

	* ext/wavpack/gstwavpackdec.c: (gst_wavpack_dec_link):
	* ext/wavpack/gstwavpackparse.c:
	  Wavpack supports samplerates from 6-192kHz, fix pad template
	  caps (fixes #322973; patch by: gcocatre@gmail.com). Also
	  remove buffer-frames from caps, they are gone in 0.10.

2005-12-15  Edgard Lima <edgard.lima@indt.org.br>

	* ext/xvid/Makefile.am:
	* ext/xvid/gstxviddec.c:
	* ext/xvid/gstxvidenc.c:
	Fixed some mem-leaks in xvid.

2005-12-14  Edgard Lima <edgard.lima@indt.org.br>

	* configure.ac:
	* ext/Makefile.am:
	* ext/xvid/gstxvid.c:
	* ext/xvid/gstxvid.h:
	* ext/xvid/gstxviddec.c:
	* ext/xvid/gstxviddec.h:
	* ext/xvid/gstxvidenc.c:
	* ext/xvid/gstxvidenc.h:
	xviddec and xvideenc ported to 0.10
		

2005-12-14  Edgard Lima <edgard.lima@indt.org.br>

	* configure.ac:
	* ext/Makefile.am:
	* ext/dts/Makefile.am:
	* ext/dts/gstdtsdec.c:
	* ext/dts/gstdtsdec.h:
	dtsdec ported to 0.10

2005-12-12  Tim-Philipp Müller  <tim at centricular dot net>

	* ext/ivorbis/vorbisfile.c: (gst_ivorbisfile_loop):
	* ext/libmms/gstmms.c: (gst_mms_src_query), (gst_mms_create):
	* ext/musepack/gstmusepackdec.c: (gst_musepackdec_src_query),
	(gst_musepackdec_loop):
	* ext/swfdec/gstswfdec.c: (gst_swfdec_video_link),
	(gst_swfdec_src_query):
	* ext/wavpack/gstwavpackparse.c: (gst_wavpack_parse_src_query):
	  GstObjects must be unref'ed with gst_object_unref() instead of
	  g_object_unref(), otherwise things break for GLib-2.6 users.

2005-12-12  David Schleef  <ds@schleef.org>

	* ext/swfdec/gstswfdec.c: (gst_swfdecbuffer_get_type),
	(gst_swfdecbuffer_class_init), (gst_swfdecbuffer_finalize),
	(gst_swfdec_buffer_from_swf), (gst_swfdec_render): Add a subclass
	of GstBuffer that wraps SwfdecBuffers.  Fix a massive memleak
	because the video buffers previously never got freed.
