@@ -1,3 +1,8 @@
+2005-12-16  Julien MOUTTE  <julien@moutte.net>
+
+	* ext/directfb/dfbvideosink.c: (gst_dfbvideosink_enum_layers),
+	(gst_dfbvideosink_init): Always prefer the primary layer.
+
 2005-12-16  Tim-Philipp Müller  <tim at centricular dot net>
 
 	* ext/wavpack/gstwavpackdec.c:
